program is now usable with java 8, changed config and output file extensions to .txt, updated README